// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> should match the snapshot 1`] = `
<div>
  <p>
    Count: 0
  </p>
  <div>
    <button
      className="button increment"
      onClick={[Function]}
    >
      +
    </button>
    <button
      className="button decrement"
      onClick={[Function]}
    >
      -
    </button>
  </div>
</div>
`;

exports[`<Counter /> should match the snapshot when { initialValue } is passed as a prop 1`] = `
<div>
  <p>
    Count: 1
  </p>
  <div>
    <button
      className="button increment"
      onClick={[Function]}
    >
      +
    </button>
    <button
      className="button decrement"
      onClick={[Function]}
    >
      -
    </button>
  </div>
</div>
`;
